# v4l-utils

./: meson.build
utils/: meson.build
utils/edid-decode/: edid-decode.h
